<resources>
    <string name="app_name">HOGIST StayAway</string>
    <string name="title_location_permission" />
    <string name="text_location_permission" />
    <string name="ok" />
    <string name="button111">Button111</string>
    <string name="stay_safe_with_hogist">STAY SAFE WITH HOGIST</string>
    <string name="maintain_social_distance">Maintain Social Distance</string>
    <string name="distancing_analytics">Distancing Analytics</string>
    <string name="covid_19_safety_measures">COVID-19 Safety Measures</string>
    <string name="food_myths_broken">Food Myths Broken</string>
    <string name="order_bulk_food">Order Bulk Food</string>
    <string name="services_amp_support"><![CDATA[Services & Support]]></string>
    <string name="hogist">HOGIST</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="companyname">companyname</string>
    <string name="email">Email</string>
    <string name="next">Login</string>
    <string name="q">Login </string>

</resources>