<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/homecolor"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="80"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_social_distancing" />

                <Button
                    android:id="@+id/Button1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:background="@drawable/roundshapebtn"
                    android:textSize="15dp"
                    android:text="@string/maintain_social_distance"
                    android:textColor="#FF0000" />


                <Button
                    android:id="@+id/Buttoncopy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:background="@drawable/roundshapebtn"
                    android:visibility="gone"
                    android:text="Stop Social Distancing "
                    android:textColor="#000000" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="80"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_analytics" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/distancing_analytics"
                    android:background="@drawable/roundshapebtn"
                    android:textSize="15dp"

                    android:textColor="#FF0000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="80"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_safety" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:background="@drawable/roundshapebtn"
                    android:textSize="15dp"

                    android:text="@string/covid_19_safety_measures"
                    android:textColor="#FF0000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="80"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_freedom" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:background="@drawable/roundshapebtn"
                    android:textSize="15dp"

                    android:text="@string/food_myths_broken"
                    android:textColor="#FF0000" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="80"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_food_delivery" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:background="@drawable/roundshapebtn"
                    android:textSize="15dp"

                    android:text="@string/order_bulk_food"
                    android:textColor="#FF0000" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="80"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_technical_support" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="20"
                    android:backgroundTint="#FFFFFF"
                    android:textSize="15dp"

                    android:text="@string/services_amp_support"
                    android:background="@drawable/roundshapebtn"
                    android:textColor="#FF0000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:weightSum="100">

             <TextView
                 android:id="@+id/text1"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Powered By"

                 android:textColor="#FBFAFA"
                 android:layout_gravity="center"
                 android:gravity="center"
                 />
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:text="YOUR F&amp;B "
                    android:textSize="15dp"
                    android:background="@color/intro_title_color"
                    android:textColor="#FBFAFA"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>